--- a/src/components/_header.scss
+++ b/src/components/_header.scss
@@ -1,3 +1,47 @@
-span {
-	color: red;
+.logo {
+  width: 4.5rem;
+  margin-right: 6rem;
+}
+
+#shoping_cart {
+  padding-left: 2rem;
+  height: 30px;
+}
+
+.nav-pages {
+  display: flex;
+  width: 30rem;
+  justify-content: space-between;
+  margin-right: 8rem;
+
+  a {
+	width: 2rem;
+
+  }
+  a:after {
+	display: block;
+	left: 0;
+	width: 0;/*задаём длинну линии до наведения курсора*/
+	height: 2px; /*задаём ширину линии*/
+	background-color: black; /*задаём цвет линии*/
+	position: relative;
+	top: 22px;
+	content: "";
+	transition: width 0.3s ease-out; /*задаём время анимации*/
+}
+a:hover:after,
+a:focus:after {
+	width: 5rem; /*устанавливаем значение 100% чтобы ссылка подчёркивалась полностью*/
+}
+}
+
+.sticky-top {
+	box-shadow: 0 1px 1px rgba(0,0,0,0.15), 
+	0 2px 2px rgba(0,0,0,0.15), 
+	0 4px 4px rgba(0,0,0,0.15), 
+	0 8px 8px rgba(0,0,0,0.15);
+}
+
+.navbar-toggler {
+  border: 1px;
 }
