--- a/src/pages/Home/_home.scss
+++ b/src/pages/Home/_home.scss
@@ -6,7 +6,6 @@
 	display: flex;
 
 }
-
 // ------------ SoldOut start-------------
 .new-soldout-line {
 	position: absolute;
@@ -33,6 +32,7 @@
 	}
 }
 // ----------------SoldOut end---------------
+
 //  ---------Header content start ----------
 .container-header-content {
 	max-width: 1200px;
@@ -46,7 +46,6 @@
 		width: 560px;
 		padding-top:80px;
 				}
-
 	.index-header__content p {
 		color: white;
 		text-align: center;
@@ -165,7 +164,6 @@
 	}
 //  ---------Header content end ----------
 
-
 // ---------WinStrike start-----------
 .winstike {
 width: 100%;
@@ -200,7 +198,106 @@ background: #000E40;
 }
 
 
-
 // ---------WinStrike end-----------
 
+//-----------SponsorsAbout start--------
+
+.flip {
+	position: relative;
+	
+}
+.flip > .front,
+.flip > .back {
+    display: block;
+    transition-timing-function: cubic-bezier(0.175, 0.885, 0.32, 1.275);
+    transition-duration: 0.5s;
+    transition-property: transform, opacity;
+}
+.flip > .front {
+	transform: rotateY(0deg);
+	
+	
+}
+.flip > .back {
+    position: absolute;
+    opacity: 0;
+    top: 0px;
+    left: 0px;
+    width: 100%;
+    height: 100%;
+    transform: rotateY(-180deg);
+}
+.flip:hover > .front {
+    transform: rotateY(180deg);
+}
+.flip:hover > .back {
+    opacity: 1;
+    transform: rotateY(0deg);
+}
+.flip.flip-vertical > .back {
+    transform: rotateX(-180deg);
+}
+.flip.flip-vertical:hover > .front {
+    transform: rotateX(180deg);
+}
+.flip.flip-vertical:hover > .back {
+    transform: rotateX(0deg);
+}
+.flip {
+    position: relative;
+    display: inline-block;
+    margin-right: 2px;
+    margin-bottom: 1em;
+    width: 100%;
+ }
+.flip > .front {
+    display: block;
+    color: white;
+    width: inherit;
+    background-size: cover !important;
+    background-position: center !important;
+    height: 220px;
+    padding: 1em 2em;
+    background: white;
+	border-radius: 10px;
+	border: 1px solid rgba(29, 28, 54, 0.2);
+	}
+.flip > .back {
+    display: block;
+    color: white;
+    width: inherit;
+    background-size: cover !important;
+    background-position: center !important;
+    height: 220px;
+    padding: 1em 2em;
+    background: black;
+	border-radius: 10px;
+	border: 1px solid rgba(29, 28, 54, 0.2);
+	}
+.flip > .front p,
+.flip > .back p {
+    font-size: 1.1rem;
+    line-height: 160%;
+	color: #999;
+	text-decoration: none;
+}
+
+.flip >.front, .flip > .back{
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+}
+
+.back h3 {
+	color: #FF151F;
+}
+.back h3:hover {
+	text-decoration: none;  
+}
+.sponsor__h3 {
+	margin: 3.2rem;
+	font-weight: 800;	
+}
+//-----------SponsorsAbout end ----------
 
