--- a/src/pages/Home/_home.scss
+++ b/src/pages/Home/_home.scss
@@ -1,303 +1,409 @@
 .index-header {
-	height: 590px;
-	width: 100%;
-	background-image: url(../../assets/home/banner.jpg);
-	padding-top: 20px;
-	display: flex;
-
+  height: 590px;
+  width: 100%;
+  background-image: url(../../assets/home/banner.jpg);
+  padding-top: 20px;
+  display: flex;
 }
 // ------------ SoldOut start-------------
 .new-soldout-line {
-	position: absolute;
-	width: 100%;
-	height: 51px;
-	display: flex;
-	align-items: center;
-	z-index: 1;
-	background: rgba(0,0,0,.7);
-	color: white;
-	.wrapper {
-		text-transform: uppercase;
-		max-width: 800px;
-		margin: 0 auto;
-	}
-	#days {
-		color: black;
-		background: #FF9300;
-		border-radius: 20px;
-		padding: 8px 17px;
-		margin: 0 10px;
-		display: inline-block;
-		text-align: center;
-	}
+  position: absolute;
+  width: 100%;
+  height: 51px;
+  display: flex;
+  align-items: center;
+  z-index: 1;
+  background: rgba(0, 0, 0, 0.7);
+  color: white;
+  .wrapper {
+    text-transform: uppercase;
+    max-width: 800px;
+    margin: 0 auto;
+  }
+  #days {
+    color: black;
+    background: #ff9300;
+    border-radius: 20px;
+    padding: 8px 17px;
+    margin: 0 10px;
+    display: inline-block;
+    text-align: center;
+  }
 }
 // ----------------SoldOut end---------------
 
 //  ---------Header content start ----------
 .container-header-content {
-	max-width: 1200px;
-	padding: 0 20px;
-	margin: 0 auto;
-	padding-left: 50%;
-	position: relative;
-	z-index: 2;
-	.index-header__content{
-		float: right;
-		width: 560px;
-		padding-top:80px;
-				}
-	.index-header__content p {
-		color: white;
-		text-align: center;
-		font-size: 65px;
-		text-transform: uppercase;
-		letter-spacing: 4px;
-		font-weight: 800;
-	}
-	.index-header__price-block{
-		text-align: center;
-		padding: 2px 0 16px 0;
-	}
-	.index-header__price-new{
-		width: 266px;
-		height: 78px;
-		color: white;
-		line-height: 78px;
-		text-transform: uppercase;
-		letter-spacing: 4px;
-		font-weight: 800;
-		font-size: 65px;
-		background-image: url(../../assets/home/pricebg.png);
-		background-position: top center;
-		background-repeat: no-repeat;
-		display: inline-block;
-	}
-	.index-header__price-old{
-		font-size: 52px;
-		color: white;
-		position: relative;
-		display: inline-block;
-		line-height: 70px;
-		vertical-align: top;
-		margin-left: 10px;
-	}
-	.index-header__price-old::before{
-		content: "";
-		width: 105%;
-		height: 2px;
-		border-top: 2px solid #fff;
-		transform: rotate(-18deg);
-		left: 0;
-		top: 32px;
-		position: absolute;
-		display: block;
-		z-index: 1;
-	}
-	.index-header__line1 {
-		color: #fff;
-		font-style: italic;
-		font-size: 42px;
-		text-transform: uppercase;
-		padding-left: 75px;
-		font-weight: 700;
-	}
-	.index-header__line2 {
-		color: #fff;
-		font-style: italic;
-		padding-left: 137px;
-		font-size: 42px;
-		text-transform: uppercase;
-		font-weight: 700;
-	}
-	.index-header__btn {
-		width: 100%;
-		max-width: 415px;
-		height: 60px;
-		background: linear-gradient(to left, #FF151F 50%, #FFFFFF 50%);
-		background-size: 200% 100%;
-		background-position: right center;
-		transition: all .5s;
-		text-transform: uppercase;
-		letter-spacing: 0.2em;
-		font-weight: 800;
-		font-size: 14px;
-		display: block;
-		border-radius: 3px;
-		text-align: center;
-		line-height: 60px;
-		color: #FFFFFF;
-		padding-right: 65px;
-		top: -10px;
-		position: relative;
-		cursor: pointer;
-		margin: 30px auto 0 auto;
-		box-shadow: 0px 22px 15px rgba(255, 21, 31, 0.38);
-		text-decoration: none;
-		transition: all 0.3s ease-out;
-		}
-	.index-header__btn:before {
-		content: "";
-		position: absolute;
-		top: 13px;
-		left: 250px;
-		background: url(../../assets/home/button-arrow.svg) top left no-repeat;
-		width: 54px;
-		height: 32px;
-		background-size: cover;
-	}
-	 .index-header__btn:hover {
-		background: white;
-		color: #FF151F;
-		font-size: 14.5px;
-	  }
-	}
+  max-width: 1200px;
+  padding: 0 20px;
+  margin: 0 auto;
+  padding-left: 50%;
+  position: relative;
+  z-index: 2;
+  .index-header__content {
+    float: right;
+    width: 560px;
+    padding-top: 80px;
+  }
+  .index-header__content p {
+    color: white;
+    text-align: center;
+    font-size: 65px;
+    text-transform: uppercase;
+    letter-spacing: 4px;
+    font-weight: 800;
+  }
+  .index-header__price-block {
+    text-align: center;
+    padding: 2px 0 16px 0;
+  }
+  .index-header__price-new {
+    width: 266px;
+    height: 78px;
+    color: white;
+    line-height: 78px;
+    text-transform: uppercase;
+    letter-spacing: 4px;
+    font-weight: 800;
+    font-size: 65px;
+    background-image: url(../../assets/home/pricebg.png);
+    background-position: top center;
+    background-repeat: no-repeat;
+    display: inline-block;
+  }
+  .index-header__price-old {
+    font-size: 52px;
+    color: white;
+    position: relative;
+    display: inline-block;
+    line-height: 70px;
+    vertical-align: top;
+    margin-left: 10px;
+  }
+  .index-header__price-old::before {
+    content: "";
+    width: 105%;
+    height: 2px;
+    border-top: 2px solid #fff;
+    transform: rotate(-18deg);
+    left: 0;
+    top: 32px;
+    position: absolute;
+    display: block;
+    z-index: 1;
+  }
+  .index-header__line1 {
+    color: #fff;
+    font-style: italic;
+    font-size: 42px;
+    text-transform: uppercase;
+    padding-left: 75px;
+    font-weight: 700;
+  }
+  .index-header__line2 {
+    color: #fff;
+    font-style: italic;
+    padding-left: 137px;
+    font-size: 42px;
+    text-transform: uppercase;
+    font-weight: 700;
+  }
+  .index-header__btn {
+    width: 100%;
+    max-width: 415px;
+    height: 60px;
+    background: linear-gradient(to left, #ff151f 50%, #ffffff 50%);
+    background-size: 200% 100%;
+    background-position: right center;
+    transition: all 0.5s;
+    text-transform: uppercase;
+    letter-spacing: 0.2em;
+    font-weight: 800;
+    font-size: 14px;
+    display: block;
+    border-radius: 3px;
+    text-align: center;
+    line-height: 60px;
+    color: #ffffff;
+    padding-right: 65px;
+    top: -10px;
+    position: relative;
+    cursor: pointer;
+    margin: 30px auto 0 auto;
+    box-shadow: 0px 22px 15px rgba(255, 21, 31, 0.38);
+    text-decoration: none;
+    transition: all 0.3s ease-out;
+  }
+  .index-header__btn:before {
+    content: "";
+    position: absolute;
+    top: 13px;
+    left: 250px;
+    background: url(../../assets/home/button-arrow.svg) top left no-repeat;
+    width: 54px;
+    height: 32px;
+    background-size: cover;
+  }
+  .index-header__btn:hover {
+    background: white;
+    color: #ff151f;
+    font-size: 14.5px;
+  }
+}
 
-	.index-header img {
-	position: absolute;
-	// width: 100%;
-    height: 590px;
-    top: 4rem;
-    left: -13rem;
-    right: 0;
-    margin: auto;
-	overflow: hidden;
-	}
+.index-header img {
+  position: absolute;
+  // width: 100%;
+  height: 590px;
+  top: 4rem;
+  left: -13rem;
+  right: 0;
+  margin: auto;
+  overflow: hidden;
+}
 //  ---------Header content end ----------
 
 // ---------WinStrike start-----------
 .winstike {
-width: 100%;
-background: #000E40;
-.wrapper{
-	max-width: 1090px;
-	background: url(../../assets/team-img.png) bottom right no-repeat;
-	height: 150px;
-	padding: 0 10px;
-	margin: 0 auto;
-}
+  width: 100%;
+  background: #000e40;
+  .wrapper {
+    max-width: 1090px;
+    background: url(../../assets/team-img.png) bottom right no-repeat;
+    height: 150px;
+    padding: 0 10px;
+    margin: 0 auto;
+  }
 }
 .winstike__text {
-	font-size: 48px;
-    text-align: center;
-    color: #fff;
-	font-weight: 900;
-	font-style: italic;;
-    text-transform: uppercase;
-    max-width: 462px;
-	padding-top: 11px;
-	
-	#win1{
-		color: #CA0A71;
-			}
-	#win3{
-		color: #0c6;
-	}
-	p{
-		margin-top: -15px;
-	}
-}
+  font-size: 48px;
+  text-align: center;
+  color: #fff;
+  font-weight: 900;
+  font-style: italic;
+  text-transform: uppercase;
+  max-width: 462px;
+  padding-top: 11px;
 
+  #win1 {
+    color: #ca0a71;
+  }
+  #win3 {
+    color: #0c6;
+  }
+  p {
+    margin-top: -15px;
+  }
+}
 
 // ---------WinStrike end-----------
 
 //-----------SponsorsAbout start--------
-
 .flip {
-	position: relative;
-	
+  position: relative;
 }
 .flip > .front,
 .flip > .back {
-    display: block;
-    transition-timing-function: cubic-bezier(0.175, 0.885, 0.32, 1.275);
-    transition-duration: 0.5s;
-    transition-property: transform, opacity;
+  display: block;
+  transition-timing-function: cubic-bezier(0.175, 0.885, 0.32, 1.275);
+  transition-duration: 0.5s;
+  transition-property: transform, opacity;
 }
 .flip > .front {
-	transform: rotateY(0deg);
-	
-	
+  transform: rotateY(0deg);
 }
 .flip > .back {
-    position: absolute;
-    opacity: 0;
-    top: 0px;
-    left: 0px;
-    width: 100%;
-    height: 100%;
-    transform: rotateY(-180deg);
+  position: absolute;
+  opacity: 0;
+  top: 0px;
+  left: 0px;
+  width: 100%;
+  height: 100%;
+  transform: rotateY(-180deg);
 }
 .flip:hover > .front {
-    transform: rotateY(180deg);
+  transform: rotateY(180deg);
 }
 .flip:hover > .back {
-    opacity: 1;
-    transform: rotateY(0deg);
+  opacity: 1;
+  transform: rotateY(0deg);
 }
 .flip.flip-vertical > .back {
-    transform: rotateX(-180deg);
+  transform: rotateX(-180deg);
 }
 .flip.flip-vertical:hover > .front {
-    transform: rotateX(180deg);
+  transform: rotateX(180deg);
 }
 .flip.flip-vertical:hover > .back {
-    transform: rotateX(0deg);
+  transform: rotateX(0deg);
 }
 .flip {
-    position: relative;
-    display: inline-block;
-    margin-right: 2px;
-    margin-bottom: 1em;
-    width: 100%;
- }
+  position: relative;
+  display: inline-block;
+  margin-right: 2px;
+  margin-bottom: 1em;
+  width: 100%;
+}
 .flip > .front {
-    display: block;
-    color: white;
-    width: inherit;
-    background-size: cover !important;
-    background-position: center !important;
-    height: 220px;
-    padding: 1em 2em;
-    background: white;
-	border-radius: 10px;
-	border: 1px solid rgba(29, 28, 54, 0.2);
-	}
+  display: block;
+  color: white;
+  width: inherit;
+  background-size: cover !important;
+  background-position: center !important;
+  height: 220px;
+  padding: 1em 2em;
+  background: white;
+  border-radius: 10px;
+  border: 1px solid rgba(29, 28, 54, 0.2);
+}
 .flip > .back {
-    display: block;
-    color: white;
-    width: inherit;
-    background-size: cover !important;
-    background-position: center !important;
-    height: 220px;
-    padding: 1em 2em;
-    background: black;
-	border-radius: 10px;
-	border: 1px solid rgba(29, 28, 54, 0.2);
-	}
+  display: block;
+  color: white;
+  width: inherit;
+  background-size: cover !important;
+  background-position: center !important;
+  height: 220px;
+  padding: 1em 2em;
+  background: black;
+  border-radius: 10px;
+  border: 1px solid rgba(29, 28, 54, 0.2);
+}
 .flip > .front p,
 .flip > .back p {
-    font-size: 1.1rem;
-    line-height: 160%;
-	color: #999;
-	text-decoration: none;
+  font-size: 1.1rem;
+  line-height: 160%;
+  color: #999;
+  text-decoration: none;
 }
 
-.flip >.front, .flip > .back{
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
-	align-items: center;
+.flip > .front,
+.flip > .back {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
-
 .back h3 {
-	color: #FF151F;
+  color: #ff151f;
 }
 .back h3:hover {
-	text-decoration: none;  
+  text-decoration: none;
 }
 .sponsor__h3 {
-	margin: 3.2rem;
-	font-weight: 800;	
+  margin: 3.2rem;
+  font-weight: 800;
 }
 //-----------SponsorsAbout end ----------
 
+// -----------Blogers Carousel start-------
+.carouse-container {
+  background-color: #f3f3f3;
+  padding: 65px 0 60px;
+  border-bottom: 12px solid #fff;
+  h3 {
+    margin: 0 auto;
+    text-align: center;
+    font-weight: 800;
+    padding-bottom: 3rem;
+  }
+}
+.carousel {
+  max-width: 1200px;
+  margin: 0 auto;
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.15);
+  transition: box-shadow 0.3s ease-in-out;
+}
+
+.carousel:before {
+  content: "";
+  position: absolute;
+  z-index: 100;
+  width: 56px;
+  height: 56px;
+  background: url(../../assets/icons/quote.png) top left no-repeat;
+  top: -27px;
+  right: 27px;
+}
+.carousel:hover {
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+}
+.carousel-content {
+  text-align: center;
+  background-color: white;
+  max-height: 300px;
+
+  h3 {
+    padding: 15px;
+    padding-top: 25px;
+    text-transform: uppercase;
+    font-weight: 600;
+  }
+  p {
+    padding: 40px;
+    font-size: large;
+  }
+  img {
+    width: 30px;
+    padding-bottom: 7px;
+  }
+}
+
+.carousel-item-wrapper {
+  display: flex;
+}
+.blog-img {
+  max-width: 225px;
+  width: 100%;
+  border-radius: 5px 0 0 5px;
+}
+.blog-text {
+  background-color: gray;
+}
+
+.carousel-indicators li {
+  //   box-sizing: content-box;
+  //   -ms-flex: 0 1 auto;
+  //   flex: 0 1 auto;
+  //   width: 30px;
+  //   height: 3px;
+  //   margin-right: 3px;
+  //   margin-left: 3px;
+  //   text-indent: -999px;
+  //   cursor: pointer;
+  background-color: green;
+  height: 1rem;
+  width: 1rem;
+  border-radius: 50%;
+  opacity: 0.3;
+  //   background-clip: padding-box;
+  //   border-top: 10px solid transparent;
+  //   border-bottom: 10px solid transparent;
+  //   opacity: 0.5;
+  //   transition: opacity 0.6s ease;
+}
+
+.carousel-control-next-icon {
+  height: 2rem;
+}
+// -----------Blogers Carousel end-------
+
+.img-obj-fit {
+  object-fit: cover;
+  /* object-position: 100% 0; */
+  /* width: 100%; */
+  height: 300px;
+}
+
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  overflow: hidden;
+  width: 100%;
+  height: 100%;
+  background-attachment: fixed;
+  background-color: #080d15;
+  opacity: 0.5;
+}
