--- a/src/index.scss
+++ b/src/index.scss
@@ -1,10 +1,11 @@
-@import './components/Header/header';
-@import './pages/Home/home';
-@import './components/Product/product';
-
+@import "./components/Header/header";
+@import "./pages/Home/home";
+@import "./components/Product/product";
+@import './pages/Products/products';
+@import "./pages/Cart/cart";
 
 body {
-  font-family: 'Open Sans';
+  font-family: "Open Sans";
 }
 body {
   margin: 0;
@@ -14,6 +15,8 @@ body {
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+
