--- a/src/pages/Products/_products.scss
+++ b/src/pages/Products/_products.scss
@@ -1,3 +1,78 @@
 .products-wrapper {
   background-color: #f3f3f3;
 }
+
+// --------products header start---------
+.index-header__btn {
+  width: 100%;
+  max-width: 415px;
+  height: 60px;
+  background: linear-gradient(to left, #ff151f 50%, #ffffff 50%);
+  background-size: 200% 100%;
+  background-position: right center;
+  transition: all 0.5s;
+  text-transform: uppercase;
+  letter-spacing: 0.2em;
+  font-weight: 800;
+  font-size: 14px;
+  display: block;
+  border-radius: 3px;
+  text-align: center;
+  line-height: 60px;
+  color: #ffffff;
+  padding-right: 65px;
+  top: -30px;
+  position: relative;
+  cursor: pointer;
+  margin: 30px auto 0 auto;
+  box-shadow: 0px 22px 15px rgba(255, 21, 31, 0.38);
+  text-decoration: none;
+  transition: all 0.3s ease-out;
+}
+.index-header__btn:before {
+  content: "";
+  position: absolute;
+  top: 13px;
+  left: 280px;
+  background: url(../../assets/home/button-arrow.svg) top left no-repeat;
+  width: 54px;
+  height: 32px;
+  background-size: cover;
+}
+.index-header__btn:hover {
+  background: white;
+  color: #ff151f;
+  font-size: 14.5px;
+}
+.products-header {
+  width: 100%;
+  height: 358px;
+  background: #000 url(../../assets/proucts/shopbg.jpg) top center no-repeat;
+  position: relative;
+}
+.products-header-wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  text-transform: uppercase;
+  height: 300px;
+
+  p:first-child {
+    font-size: 24px;
+    font-weight: 800;
+    font-style: italic;
+    padding-top: 65px;
+    bottom: -20px;
+    position: relative;
+  }
+  p:nth-child(2) {
+    font-size: 60px;
+    font-weight: 900;
+    font-style: italic;
+    max-width: 700px;
+    text-align: center;
+  }
+}
+
+// --------products header end---------
