add bascet icon on header

--- a/src/pages/Products/_products.scss
+++ b/src/pages/Products/_products.scss
@@ -74,5 +74,12 @@
     text-align: center;
   }
 }
+.products-header-foot {
+  width: 100%;
+  height: 56px;
+  background-color: white;
+  box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.2);
+  margin-bottom: 20px;
+}
 
 // --------products header end---------
