--- a/src/index.scss
+++ b/src/index.scss
@@ -1,8 +1,9 @@
 @import "./components/Header/header";
 @import "./pages/Home/home";
 @import "./components/Product/product";
-@import './pages/Products/products';
+@import "./pages/Products/products";
 @import "./pages/Cart/cart";
+@import "./pages/ProductDetails/productDetails";
 
 body {
   font-family: "Open Sans";
@@ -18,5 +19,3 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
-
-
