--- a/src/pages/ProductDetails/_productDetails.scss
+++ b/src/pages/ProductDetails/_productDetails.scss
@@ -6,6 +6,7 @@
   margin-top: 2px;
 }
 
+
 .products-details__root {
   background-color: #f3f3f3;
   display: flex;
@@ -23,7 +24,38 @@
     font-size: 3rem;
     color: #f66969;
   }
+  .product-details__title {
+    font-weight: 700;
+    font-size: 2.3rem;
+  }
 }
+// ----- Gift popover start -------
+.product-details__label {
+  display: flex;
+  width: 20px;
+  background: #3888dc;
+  width: 72px;
+  position: relative;
+  border-radius: 20px;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 35px;
+  cursor: pointer;
+  span {
+    display: inline-block;
+    color: #fff;
+    font-size: 20px;
+  }
+  .product-details__img {
+    width: 16px;
+    position: relative;
+    top: -2px;
+    display: inline-block;
+  }
+}
+
+
+// ----- Gift popover end -------
 
 .products-details__wrapper {
   margin-top: 40px;
