--- a/src/index.scss
+++ b/src/index.scss
@@ -4,6 +4,7 @@
 @import "./pages/Products/products";
 @import "./pages/Cart/cart";
 @import "./pages/ProductDetails/productDetails";
+@import "./components/Footer/footer";
 
 body {
   font-family: "Open Sans";
