--- a/src/index.scss
+++ b/src/index.scss
@@ -5,6 +5,7 @@
 @import "./pages/Cart/cart";
 @import "./pages/ProductDetails/productDetails";
 @import "./components/Footer/footer";
+@import "./components/Error/error";
 
 body {
   font-family: "Open Sans";
