--- a/src/index.scss
+++ b/src/index.scss
@@ -6,6 +6,7 @@
 @import "./pages/ProductDetails/productDetails";
 @import "./components/Footer/footer";
 @import "./components/Error/error";
+@import "./components/MyToast/myToast";
 
 body {
   font-family: "Open Sans";
