--- a/src/index.scss
+++ b/src/index.scss
@@ -7,6 +7,7 @@
 @import "./components/Footer/footer";
 @import "./components/Error/error";
 @import "./components/MyToast/myToast";
+@import "./pages/Oferta/oferta";
 
 body {
   font-family: "Open Sans";
