--- a/src/components/Header/_header.scss
+++ b/src/components/Header/_header.scss
@@ -13,7 +13,12 @@
   width: 30rem;
   justify-content: space-between;
   margin-right: 8rem;
+  text-transform: uppercase;
 
+  .header__delivery {
+    color: red;
+    width: 5rem;
+  }
   a {
     width: 2rem;
   }
