--- a/src/index.scss
+++ b/src/index.scss
@@ -8,6 +8,7 @@
 @import "./components/Error/error";
 @import "./components/MyToast/myToast";
 @import "./pages/Oferta/oferta";
+@import "./pages/Delivery/delivery";
 
 body {
   font-family: "Open Sans";
