--- a/src/pages/Cart/_cart.scss
+++ b/src/pages/Cart/_cart.scss
@@ -16,7 +16,7 @@
   display: flex;
   flex-direction: column;
   text-align: center;
-  padding-top: 40px;
+  min-height: 500px;
   h3 {
     font-size: 25px;
     font-weight: 700;
@@ -44,10 +44,13 @@
 
 .btn-green:hover {
   text-decoration: none;
-  margin-top: -6px;
+  transform: scale(1.02);
   box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.2);
   color: white;
   font-size: 16.2px;
+}
+
+.redirect-products {
 }
 // ---------No product in the Cart end----------
 
