--- a/src/index.scss
+++ b/src/index.scss
@@ -9,6 +9,7 @@
 @import "./components/MyToast/myToast";
 @import "./pages/Oferta/oferta";
 @import "./pages/Delivery/delivery";
+@import "./pages/Contacts/contacts";
 
 body {
   font-family: "Open Sans";
