--- a/src/components/Product/_product.scss
+++ b/src/components/Product/_product.scss
@@ -4,7 +4,8 @@
   transition: all 0.3s ease-out;
 
   button {
-    width: 8rem;
+    width: 120px;
+    font-size: 16px;
   }
   .product-img {
     object-fit: cover;
