--- a/src/components/Footer/_footer.scss
+++ b/src/components/Footer/_footer.scss
@@ -109,3 +109,92 @@
 }
 
 // ---------Footer foot part end-----------
+
+//----------Media Query statr-----------
+
+@media only screen and (min-width: 1100px) {
+  .footer__icons-mob {
+    display: none;
+  }
+  .footer__logo_mob {
+    display: none;
+  }
+}
+
+@media only screen and (max-width: 1100px) {
+  .footer-wrapper {
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    #footer-hr {
+      display: none;
+    }
+    .footer-header {
+      display: none;
+    }
+    .footer-foot-wrapper {
+      display: none;
+    }
+
+    .footer__icons-mob {
+      flex-direction: column;
+      margin: 1.5rem;
+
+      .footer__link {
+        // text-decoration: none;
+        color: white;
+        margin-left: 0.5rem;
+      }
+      span {
+        .foot__social__icon {
+          transform: scale(1.3);
+          margin: 10px;
+          margin-bottom: 30px;
+        }
+      }
+
+      span .twitter:hover {
+        filter: sepia(1) hue-rotate(150deg) saturate(4) brightness(1);
+      }
+      span .instagram:hover {
+        filter: sepia(1) hue-rotate(300deg) saturate(4) brightness(1);
+      }
+      span .vk:hover {
+        filter: sepia(1) hue-rotate(200deg) saturate(4) brightness(1);
+      }
+    }
+
+    .footer__logo_mob {
+      flex-direction: column;
+      margin: 1.5rem;
+      p {
+        color: white;
+        font-size: 16px;
+
+      }
+      .footer-foot__logo_img {
+        display: flex;
+        flex-direction: row;
+        width: 100%;
+        justify-content: space-between;
+        align-self: center;
+        margin-bottom: 17px;
+        margin-top: 3px;
+        .footer-foot__ages {
+          // margin-top: 8px;
+          // margin-right: 15px;
+          width: 30px;
+        }
+
+        .footer-foot__logo g {
+          fill: white;
+        }
+        .footer-foot__logo {
+          margin-right: 0.9rem;
+          margin-top: 4px;
+          width: 60px;
+        }
+      }
+    }
+  }
+}
