--- a/src/pages/Cart/_cart.scss
+++ b/src/pages/Cart/_cart.scss
@@ -5,7 +5,7 @@
 .shopping-cart {
   max-width: 960px;
   margin: 0 auto;
-  min-height: 500px;
+  min-height: calc(100vh - 216px);
   h5 {
     font-weight: 400;
     margin-top: 3px;
@@ -22,7 +22,7 @@
   display: flex;
   flex-direction: column;
   text-align: center;
-  min-height: 500px;
+  min-height: calc(100vh - 216px);
   h3 {
     font-size: 25px;
     font-weight: 700;
