--- a/src/pages/Contacts/_contacts.scss
+++ b/src/pages/Contacts/_contacts.scss
@@ -6,6 +6,7 @@
   justify-content: space-between;
   padding: 10px;
   max-width: 800px;
+  min-height: calc(100vh - 216px);
 
   h1 {
     margin-top: 12px;
