--- a/src/pages/Products/_products.scss
+++ b/src/pages/Products/_products.scss
@@ -1,5 +1,6 @@
 .products-wrapper {
   background-color: #f3f3f3;
+  min-height: calc(100vh - 216px);
 }
 
 // --------products header start---------
@@ -44,6 +45,7 @@
   color: #ff151f;
   font-size: 14.5px;
 }
+
 .products-header {
   width: 100%;
   height: 358px;
@@ -83,3 +85,28 @@
 }
 
 // --------products header end---------
+
+//----------Media Query statr-----------
+@media only screen and (max-width: 900px) {
+  .products-header {
+    .index-header__btn {
+      max-width: 315px;
+    }
+    .index-header__btn:before {
+      left: 13.3rem;
+    }
+    .products-header-wrapper {
+      p:first-child {
+        font-size: 18px;
+        font-weight: 700;
+      }
+      p:nth-child(2) {
+        font-size: 42px;
+        font-weight: 900;
+        max-width: 600px;
+      }
+    }
+  }
+}
+
+//----------Media Query end-----------
